web/public/css/dashboard.less
/* ... */
body {
	background: white;
  font-family: "latoregular", Arial, Helvetica, sans-serif;
}

p {
	font-size: 13px;
}

h1 {
	font-size: 28px;
	font-weight: bold;
}

h2 {
	font-size: 24px;
	font-weight: bold;
}

ul {
	font-size: 13px;
}

.footer-text {
  color: white;
}

.cd-container {
  background: white;
  padding: 20px;
  width: 100%;
  margin: 0 auto;
  margin-top: 10px;
}

.cp-login {

  .cd-input-row {
    margin: 25px 0;
  }

  .cd-info-row {
    margin: 0;

    span {

      &.cd-msg-info {
        color: @cd-blue;
      }

      &.cd-msg-warn {
        color: @cd-orange;
      }

      &.cd-msg-error {
        color: @cd-red;
      }
    }
  }

  .cd-btn-row {
    margin: 15px 0;
  }

  .cd-link-row {
    margin: 5px 0;
  }

  .alert-info {
    margin: 0;
    margin-top: 15px;
  }
}

label {
	display: inline-block;
	font-size: 14px;
	text-align: left;
}

.main-container {
    padding: 46px 100px 0 100px;
}

.cd-dashboard {
	background: white;
	padding: 0 20px;
	width: 100%;
	margin: 0 auto;
	margin-top: 10px;

  a {
    color: #315169;
  }

  .setup-dojo{
    padding: 20px;

    .validationMessage{
      width: 100%;
    }
  }

  .state-heading {
    font-weight: bold;
    margin-left: 20px;
  }

  .start-dojo-wizard {
    margin-bottom: 20px;

    .form-group input[type="checkbox"] {
      display: none;
    }

    .form-group input[type="checkbox"] + .btn-group > label span {
      width: 20px;
    }

    .form-group input[type="checkbox"] + .btn-group > label span:first-child {
      display: none;
    }

    .form-group input[type="checkbox"] + .btn-group > label span:last-child {
      display: inline-block;
    }

    .form-group input[type="checkbox"]:checked + .btn-group > label span:first-child {
      display: inline-block;
    }

    .form-group input[type="checkbox"]:checked + .btn-group > label span:last-child {
      display: none;
    }

    .glyphicon-info-sign {
      margin-top: 7px;
    }

    .validationMessage {
      position: relative;
      width: 100%;
      text-align: left;
      line-height: 30px;
    }

    .terms-conditions-checkbox {
      .validationMessage {
        text-align: center;
      }

      label::before {
        position: relative;
      }
    }

    .gatherTeamChecklist {
      border: 1px dashed rgb(66, 139, 202);
      padding: 5px;
      margin: 10px;
    }
  }

  .dojoWizardComplete {
    width: 100%;
    background: #5cb85c;
    color: @cd-white;
    padding: 10px;
    border-radius: 5px;
  }

  .event-tooltip {
    font-size: 18px;
    margin-left: 10px;
    cursor: pointer;
  }
}

.event-form {

  .checkbox {
    padding-left: 7px;

    label {
      padding-left: 10px;
    }
  }

  .radio {
    padding-left: 1.5em;
  }

  .session-expand-button {
    margin-right: 1em;
    margin: 0.5em 1em 0.5em 0em;
  }

  .session-name-container {
    padding-left: 0;
  }
}

.clear {
  clear: both;
}

.dojo-list-dashboard {
  min-height: 350px;
  margin: 0 auto;

  .widget {
    margin-bottom: 55px;
  }
}

.cd-text-heading1 {
	color: black;
	font-size: 20px;
}

.cd-border-bottom {
	padding-bottom: 10px;
}

#cd-charter-text {
	width: 75%;
  min-width: 275px;
  margin: auto;

  input {
    margin-bottom: 15px;
  }

  ul {
    list-style-type: square;

    li {
      font-size: 15px;
      color: @cd-green;

      span {
        font-size: 13px;
        color: black;
      }
    }
  }
}

.cd-create-dojo-container {
  padding: 0;

  .pre-game-warning {
    background-color: #FBF9E4;
    width: 550px;
    padding: 10px;
    border: 1px solid #FBEED5;
    border-radius: 5px;
    margin-top: 15px;

    span {
      font-size: 15px;
      font-weight: bold;
    }

    p {
      padding-top: 0;
      color: #C09853;
    }
  }

  .setup-dojo-icons {
    position: relative;
    display: inline-block;
    transform: translateY(25%);

    .setup-dojo-info-btn {
      font-size: 2em;
      margin-left: 10px;
      vertical-align: 6%;
    }

    .setup-dojo-tao-btn {
      background: url("../img/cdtao.png") no-repeat right center;
      margin-left: 10px;
      width: 51px;
      height: 24px;
      display: inline-block;
    }
  }
}

@media only screen and (max-width: 768px) {

  .fullscreen-only {
    display: none !important;
  }
}

@media only screen and (min-width: 768px) {

  .mobile-only {
    display: none !important;
  }
}

@media only screen and (min-width: 1200px) {

  .info-button-container {
    .col-xs-10 {
      padding-left: 0;
    }
  }
}

@media only screen and (max-width: 1200px) {

  .infoCheckbox {
    padding-left: 35px;
  }
}

.cd-tabset {

  .nav.nav-tabs {
    color: #000000;
    width: 80%;
    padding-left: 0;
    font-size: 18px;
    border-top-left-radius: 0;
    border-top-right-radius: 0;
    border: none;

    li {
      margin: 0;

      a, a:hover, a:focus {
        font-size: 16px;
        font-weight: normal;
        border: none;
        cursor: pointer;
        color: #ffffff;
        padding-left: 30px;
        padding-right: 30px;
        border-radius: 0;
        margin-right: 0;
      }

      &.active {
        border: none;

        a, a:hover, a:focus {
          color: #FFFFFF;
          font-size: 16px;
          font-weight: normal;
          background-color: #46A0CA;
          box-shadow: none;
          margin-top: 0 !important;
          border-radius: 2px;
        }
      }
    }
  }

  .tab-content {
    padding-top: 20px;

    .tab-pane {

      &.active {
        border: none;
      }
    }
  }
}

.pointer {
  cursor: pointer;
}

.map-canvas {
  height: 360px;
}
/* ... */

